--- a/vercel.json
+++ b/vercel.json
@@ -9,18 +9,5 @@
       "runtime": "nodejs20.x"
     }
   },
-  "regions": ["iad1"],
-  "env": {
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "@next_public_firebase_api_key",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "@next_public_firebase_auth_domain",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "@next_public_firebase_project_id",
-    "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "@next_public_firebase_storage_bucket",
-    "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "@next_public_firebase_messaging_sender_id",
-    "NEXT_PUBLIC_FIREBASE_APP_ID": "@next_public_firebase_app_id",
-    "NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID": "@next_public_firebase_measurement_id",
-    "FIREBASE_PROJECT_ID": "@firebase_project_id",
-    "NEXT_PUBLIC_VAPI_WEB_TOKEN": "@next_public_vapi_web_token",
-    "FIREBASE_CLIENT_EMAIL": "@firebase_client_email",
-    "FIREBASE_PRIVATE_KEY": "@firebase_private_key"
-  }
+  "regions": ["iad1"]
 }
