--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,3 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "outputDirectory": ".next",
-  "functions": {
-    "app/api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
-  "regions": ["iad1"]
+  "framework": "nextjs"
 }
